--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,55 @@
 html {
     font-size: 62.5%;
 }
+
+main {
+    border: 2px solid black;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#time-container {
+    border: 2px solid black;
+    width: 35vw;
+    height: 35vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#numbers-container {
+    border: 2px solid black;
+    margin: 20px;
+    font-size: 3.5rem;
+    font-family: cursive;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+#buttons-container {
+    display: flex;
+    flex-direction:row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+#buttons-container .select-container {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#buttons-container .select-container select{
+    width:35px;
+    height: 30px;
+}
+
+#buttons-container .select-container button {
+    width:20px;
+    height: 30px;
+}
