--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ main {
 }
 
 #numbers-container {
-    border: 2px solid black;
     margin: 20px;
     font-size: 3.5rem;
     font-family: cursive;
@@ -58,4 +57,14 @@ main {
 #buttons-container .select-container button {
     width:20px;
     height: 30px;
+}
+
+#start-stop-container {
+    margin-top: 30px;
+}
+#start-stop-container button {
+    width: 70px;
+    height: 30px;
+    font-size: 1.6rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
